# lofifocus-docker

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  PRIVACY.md  README.md  app.js  appwrite.js  astro.config.mjs  dev.sh  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  kbve.ts  package.json  pb_schema.json  pynode.js  pyproject.toml  router.js  sqlite.sh  tsconfig.json  v.js
.github/workflows/: release.yml
cloud/create-lofi-focus-music/: index.js  package.json
cloud/update-api-profile/: index.js  package.json
disable/: apollo.py  bigman.py  champion.py  datajson.py  example.py  kbve.py  tmockup.py
musicgen/: .gitignore  app.py  requirements.txt
musicgen/n8n/: Music_Generation.json
public/: index.html
public/download/: index.html
scripts/: hello.py
